# Hangman-Game

./: Hangman-Game.cabal  LICENSE  README.md  estado_jogo.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  elaborated-plan.orig  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: .Main.swp  CHANGELOG.md  Database.hs  GameFunctions.hs  Hangman-Game.cabal  Main.hs  Main.hs.orig
src/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
