cabal-version:      3.0

-- The name of the package.
name:               Hangman-Game

-- The package version.
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Jogo de forca com funcionalidade de torneio.

-- A longer description of the package.
description:        Um jogo de forca onde jogadores podem competir e registrar vitórias e derrotas.

-- The license under which the package is released.
license:            MIT

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Orlandovpjunior

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         orlando.virginio.penha.junior@ccc.ufcg.edu.br

-- A copyright notice.
copyright:          (c) 2024 Orlandovpjunior

build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

-- Executable configuration
executable Hangman-Game
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions: 

    -- Other library packages from which modules are imported.
    build-depends:    base >= 4.13 && < 5.0, mysql-simple, text, ansi-terminal, random

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Additional GHC options for this executable.
    ghc-options:      -Wall
